--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="intro-card" class="bg-white rounded-t-2xl shadow-xl overflow-hidden mb-8">
             <div class="p-8 border-b border-slate-100">
                 <!-- Logo -->
-                <div class="flex justify-center mb-6">
+                <div class="flex justify-center mb-6 bg-[#1B1718] rounded-xl py-6 shadow-sm">
                     <img src="https://360conecta.com/assets/logo.png" alt="Conecta360 Logo" class="h-16 object-contain">
                 </div>
 
@@ -154,32 +154,16 @@
             </div>
         </form>
 
-        <!-- View: QUALIFIED -->
-        <div id="view-qualified" class="hidden bg-white p-12 rounded-2xl shadow-xl text-center animate-fade-in">
-            <div class="w-20 h-20 bg-green-100 rounded-full flex items-center justify-center mx-auto mb-6">
-                <svg class="w-10 h-10 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <!-- View: Thank You (Universal) -->
+        <div id="view-thank-you" class="hidden bg-white p-12 rounded-2xl shadow-xl text-center animate-fade-in">
+            <div class="w-20 h-20 bg-amber-100 rounded-full flex items-center justify-center mx-auto mb-6">
+                <svg class="w-10 h-10 text-[#FFB300]" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
             </div>
-            <h2 class="text-3xl font-bold text-slate-900 mb-4">¡Felicidades, pasas a la siguiente etapa!</h2>
-            <p class="text-slate-600 text-lg mb-8">
-                Te estamos redirigiendo al formulario de siguientes pasos...
-            </p>
-            <div class="flex justify-center">
-                <div class="w-8 h-8 border-4 border-amber-200 border-t-[#FFB300] rounded-full animate-spin"></div>
-            </div>
-        </div>
-
-        <!-- View: DISQUALIFIED -->
-        <div id="view-disqualified" class="hidden bg-white p-8 rounded-2xl shadow-xl text-center animate-fade-in">
-            <div class="w-20 h-20 bg-slate-100 rounded-full flex items-center justify-center mx-auto mb-6">
-                <svg class="w-10 h-10 text-slate-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M5 13l4 4L19 7" />
-                </svg>
-            </div>
-            <h2 class="text-2xl font-bold text-slate-800 mb-4">Solicitud Recibida</h2>
-            <p class="text-slate-600 leading-relaxed text-lg">
-                Muchas gracias por aplicar. En un máximo de un día hábil se le dará respuesta.
+            <h2 class="text-3xl font-bold text-slate-900 mb-4">¡Solicitud Recibida!</h2>
+            <p class="text-slate-600 text-lg leading-relaxed">
+                Muchas gracias por aplicar. En un máximo de 24 horas se le notificará sobre su avance.
             </p>
         </div>
 
