--- a/index.html
+++ b/index.html
@@ -88,9 +88,25 @@
 
             <!-- 4. WhatsApp -->
             <div class="bg-white p-6 rounded-xl border border-slate-200 shadow-sm transition-shadow hover:shadow-md">
-                <label htmlFor="whatsapp" class="block text-lg font-medium text-slate-800 mb-3">
-                    Teléfono<span class="text-red-500">*</span>
-                </label>
+                <div class="flex items-center justify-between mb-3 relative">
+                    <label htmlFor="whatsapp" class="flex items-center gap-2 text-lg font-medium text-slate-800">
+                        WhatsApp<span class="text-red-500">*</span>
+                    </label>
+                    
+                    <!-- Tooltip Container -->
+                    <div class="group relative flex items-center">
+                        <svg class="w-5 h-5 text-slate-400 cursor-help hover:text-[#FFB300] transition-colors" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+                        <!-- Tooltip Box -->
+                        <div class="absolute bottom-full right-0 mb-3 hidden group-hover:block w-64 p-3 bg-slate-800 text-white text-xs font-normal rounded-lg shadow-2xl z-20 pointer-events-none leading-relaxed animate-fade-in">
+                            Es importante que sea un número que pueda recibir WhatsApp, ya que por este medio se notificará el avance y se enviarán instrucciones para avanzar.
+                            <!-- Arrow -->
+                            <div class="absolute top-full right-2 -mt-1 border-8 border-transparent border-t-slate-800"></div>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="flex gap-2">
                     <select id="countryCode" name="countryCode" class="w-1/3 md:w-1/4 px-3 py-3 bg-slate-50 border border-slate-200 rounded-lg focus:ring-2 focus:ring-[#FFB300] focus:border-[#FFB300] outline-none transition-all text-slate-700 bg-white">
                         <option value="+52" selected>🇲🇽 +52</option>
